# document-query-engine-python

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/projects/-Users-laurencesonnenberg-code-agent-query-engine-python/memory/: MEMORY.md  feedback_docstrings.md  feedback_file_content.md  feedback_poetry.md  project_roadmap.md  user_profile.md
.github/workflows/: api-build.yml  api-tests.yml  ui-build.yml
app/: dependencies.py  main.py
app/api/v1/: health.py  knowledge_graph.py  router.py  tasks.py
app/connectors/: __init__.py  filesystem.py  gcs.py  setup.py
app/core/: config.py  error_handlers.py  errors.py  exceptions.py  logging.py  middleware.py
app/models/: errors.py  health.py  knowledge_graph.py
app/services/: knowledge_graph.py  query_cache.py  upload.py
app/worker/: celery_app.py  tasks.py
infra/: .env.example  README.md
infra/k8s/neo4j/chart/: Chart.yaml  values.yaml
infra/k8s/neo4j/chart/templates/: service.yaml  (+1 more)
infra/k8s/platform/chart/: Chart.yaml  values.yaml
infra/k8s/postgres/chart/: Chart.yaml  values.yaml
infra/k8s/redis/chart/: Chart.yaml  values.yaml
infra/scripts/: create-k8s-cluster.sh  create-k8s-maps.sh  delete-k8s-cluster.sh  helm-deploy.sh  setup-infra.sh
reviews/: 2026-03-27-uncommitted-code-review.md
services/query-engine/: .env.example  .gitignore  Dockerfile  pyproject.toml
services/query-engine/app/: dependencies.py  main.py
services/query-engine/app/api/v1/: health.py  knowledge_graph.py  router.py  tasks.py
services/query-engine/app/connectors/: __init__.py  base.py  filesystem.py  gcs.py  registry.py  setup.py
services/query-engine/app/core/: config.py  error_handlers.py  errors.py  gcs.py  metrics.py  postgres.py  rate_limit.py
services/query-engine/app/models/: __init__.py  errors.py  health.py  knowledge_graph.py  tasks.py
services/query-engine/app/services/: dual_retriever.py  ingestion_pipeline.py  kg_deletion.py  kg_ingestion.py  kg_query.py  knowledge_graph.py  neo4j_kg_retriever.py  query_cache.py  triplet_extractor.py  upload.py
services/query-engine/app/worker/: __init__.py  celery_app.py  tasks.py
services/query-engine/chart/: Chart.yaml  values.yaml
services/query-engine/chart/templates/: api-deployment.yaml  api-service.yaml  beat-deployment.yaml  worker-deployment.yaml
services/query-engine/tests/: conftest.py  test_connectors.py  test_delete_document_task.py  test_error_handlers.py  test_health.py  test_ingest_source_endpoint.py  test_ingest_source_task.py  test_ingestion_pipeline.py  test_knowledge_graph.py  test_knowledge_graph_service.py  test_middleware.py  test_neo4j_kg_retriever.py  test_query_cache.py  test_rate_limit.py  test_tasks_endpoint.py  test_triplet_extractor.py  test_upload_endpoint.py
services/query-engine/tests/integration/: conftest.py  test_ingest_query_delete.py
tests/: conftest.py  test_connectors.py  test_dual_retriever.py  test_error_handlers.py  test_health.py  test_ingest_source_task.py  test_knowledge_graph.py  test_metrics.py  test_middleware.py  test_rate_limit.py
ui/: .dockerignore  .env.example  .npmrc  Dockerfile  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
ui/chart/: Chart.yaml  values.yaml
ui/chart/templates/: deployment.yaml
ui/src/components/graph/: KnowledgeGraph.vue
ui/src/components/layout/: AppSidebar.vue
ui/src/components/query/: QueryResultCard.vue  SourceNodeList.vue
ui/src/components/upload/: DeleteDocumentDialog.vue  DocumentList.vue  FileDropZone.vue  IngestionProgress.vue
ui/src/composables/: useDocumentHistory.ts  useFileUpload.ts  useTaskPoller.ts
ui/src/composables/ui/: useSidebar.ts
ui/src/router/: index.ts
ui/src/services/: api.ts  queryEngine.ts
ui/src/types/: queryEngine.ts
ui/src/views/: QueryView.vue  UploadView.vue
(+14 files in other folders)
